# FlightDataHandler

./: CMakeLists.txt  README.md  app.cpp
Application/: app.cpp  app.txt  app_this.cpp
Application/Algorithm/: PulseDataHandler.cpp  PulseDataHandler.h  algorithmTest.cpp
Application/DataLoader/: BinaryLoader.cpp  BinaryLoader.h  FlightData.cpp  FlightData.h  MaxZoomLoader.cpp  MaxZoomLoader.h  TileData.cpp  TileData.h  TileLoader.cpp  TileLoader.h  TrackLoader.cpp  TrackLoader.h
Application/GettingGraphics/: Graphics.cpp  Graphics.h
Application/Line/: Line.h
Application/Map/: MapLayer.cpp  MapLayer.h  Tile.cpp  Tile.h  map.cpp  map.h  map_part.cpp  map_part.h
Application/StringDrawer/: StringDrawer.cpp  StringDrawer.h
Application/Track/: Track.cpp  Track.h
Application/UI/: SubWindow.cpp  SubWindow.h  button.cpp  button.h
Application/Utils/: CoordsConverter.cpp  CoordsConverter.h  coords_converter2.cpp  graph_test.cpp
SparkyEngine/lib/freeimage_brew/3.18.0/: INSTALL_RECEIPT.json
SparkyEngine/lib/freeimage_brew/3.18.0/.brew/: freeimage.rb
SparkyEngine/lib/freetype-2.10.0/: freetype_headers.h
SparkyEngine/lib/glfw/: cmake_uninstall.cmake
SparkyEngine/lib/glfw/docs/: Doxyfile
SparkyEngine/lib/glm/0.9.9.8/: INSTALL_RECEIPT.json
SparkyEngine/lib/imagemagick/7.1.0-22/: INSTALL_RECEIPT.json
SparkyEngine/lib/imagemagick/7.1.0-22/.brew/: imagemagick.rb
SparkyEngine/lib/imagemagick/7.1.0-22/etc/ImageMagick-7/: delegates.xml
SparkyEngine/lib/imagemagick/7.1.0-22/include/ImageMagick-7/MagickCore/: magick-baseconfig.h  version.h
SparkyEngine/lib/imagemagick/7.1.0-22/lib/: libMagick++-7.Q16HDRI.5.dylib  libMagick++-7.Q16HDRI.la  libMagickCore-7.Q16HDRI.10.dylib  libMagickCore-7.Q16HDRI.la  libMagickWand-7.Q16HDRI.10.dylib  libMagickWand-7.Q16HDRI.la
SparkyEngine/lib/imagemagick/7.1.0-22/lib/ImageMagick/config-Q16HDRI/: configure.xml
SparkyEngine/lib/imagemagick/7.1.0-22/lib/ImageMagick/modules-Q16HDRI/coders/: aai.la  art.la  ashlar.la  avs.la  bgr.la  bmp.la  braille.la  cals.la  caption.la  cin.la  cip.la  clip.la  cmyk.la  cube.la  cut.la  dcm.la  dds.la  debug.la  dib.la  dng.la  dot.la  dpx.la  ept.la  exr.la  farbfeld.la  fax.la  fits.la  fl32.la  ftxt.la  gif.la  gradient.la  gray.la  hald.la  hdr.la  heic.la  histogram.la  hrz.la  html.la  icon.la  info.la  (+87 more)
SparkyEngine/lib/imagemagick/7.1.0-22/lib/ImageMagick/modules-Q16HDRI/filters/: analyze.la
SparkyEngine/lib/imagemagick/7.1.0-22/lib/pkgconfig/: ImageMagick.pc  Magick++.pc  MagickCore-7.Q16HDRI.pc  MagickWand.pc
SparkyEngine/lib/imagemagick/7.1.0-22/share/man/man1/: ImageMagick.1  animate.1  compare.1  composite.1  conjure.1  convert.1  display.1  identify.1  import.1  magick-script.1  magick.1  mogrify.1  montage.1  stream.1
SparkyEngine/lib/libmatio/1.5.26/: INSTALL_RECEIPT.json  NEWS
SparkyEngine/lib/libmatio/1.5.26/.brew/: libmatio.rb
SparkyEngine/lib/libmatio/1.5.26/lib/: libmatio.11.dylib  libmatio.dylib
SparkyEngine/lib/libmatio/1.5.26/lib/pkgconfig/: matio.pc
SparkyEngine/lib/libmatio/1.5.26/share/man/man3/: Mat_GetVersion.3
SparkyEngine/lib/matplotplusplus/1.2.0/: INSTALL_RECEIPT.json
SparkyEngine/lib/matplotplusplus/1.2.0/.brew/: matplotplusplus.rb
SparkyEngine/lib/matplotplusplus/1.2.0/include/matplot/freestanding/: plot.h
SparkyEngine/lib/matplotplusplus/1.2.0/lib/cmake/Matplot++/: Matplot++Config.cmake  Matplot++Targets-release.cmake  Matplot++Targets.cmake
SparkyEngine/lib/opencv/4.7.0_7/: INSTALL_RECEIPT.json
SparkyEngine/lib/opencv/4.7.0_7/.brew/: opencv.rb
SparkyEngine/lib/opencv/4.7.0_7/lib/: libopencv_alphamat.4.7.0.dylib  libopencv_aruco.4.7.0.dylib  libopencv_barcode.4.7.0.dylib  libopencv_bgsegm.4.7.0.dylib  libopencv_bioinspired.4.7.0.dylib  libopencv_calib3d.4.7.0.dylib  libopencv_ccalib.4.7.0.dylib  libopencv_core.4.7.0.dylib  libopencv_datasets.4.7.0.dylib  libopencv_dnn.4.7.0.dylib  libopencv_dnn_objdetect.4.7.0.dylib  libopencv_dnn_superres.4.7.0.dylib  libopencv_dpm.4.7.0.dylib  libopencv_face.4.7.0.dylib  libopencv_features2d.4.7.0.dylib  libopencv_flann.4.7.0.dylib  libopencv_freetype.4.7.0.dylib  libopencv_fuzzy.4.7.0.dylib  libopencv_hfs.4.7.0.dylib  libopencv_highgui.4.7.0.dylib  libopencv_img_hash.4.7.0.dylib  libopencv_imgcodecs.4.7.0.dylib  libopencv_imgproc.4.7.0.dylib  libopencv_intensity_transform.4.7.0.dylib  libopencv_line_descriptor.4.7.0.dylib  libopencv_mcc.4.7.0.dylib  libopencv_ml.4.7.0.dylib  libopencv_objdetect.4.7.0.dylib  libopencv_optflow.4.7.0.dylib  libopencv_phase_unwrapping.4.7.0.dylib  libopencv_photo.4.7.0.dylib  libopencv_plot.4.7.0.dylib  libopencv_quality.4.7.0.dylib  libopencv_rapid.4.7.0.dylib  libopencv_reg.4.7.0.dylib  libopencv_rgbd.4.7.0.dylib  libopencv_saliency.4.7.0.dylib  libopencv_sfm.4.7.0.dylib  libopencv_shape.4.7.0.dylib  libopencv_stereo.4.7.0.dylib  (+15 more)
SparkyEngine/lib/opencv/4.7.0_7/lib/cmake/opencv4/: OpenCVModules-release.cmake
SparkyEngine/lib/stb_img/: stb_img.h
SparkyEngine/src/: engine.h  sparky.h
SparkyEngine/src/Timestep/: TimeStep.h
SparkyEngine/src/audio/: sound.h  sound_manager.cpp
SparkyEngine/src/graphics/: batchrenderer2d.cpp  batchrenderer2d.h  font.cpp  font.h  font_manager.cpp  font_manager.h  label.cpp  label.h  lightsetup.cpp  renderable2d.h  renderer2d.h  shader.cpp  shadow.cpp  shadow.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texture_manager.cpp  window.cpp  window.h
SparkyEngine/src/graphics/layers/: group.cpp  group.h  layer.cpp  layer.h
SparkyEngine/src/maths/: mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
SparkyEngine/src/shaders/: basicTex.frag  basicTexBlack.frag  basicTexBlack.vert  basicTexNoLight.frag  basicTexNoLight.vert  figure.frag  fog.frag  fog.vert  shadow.frag  shadow.vert
SparkyEngine/src/shaders/test/: shader1.frag  shader2.frag  shaderScroll.frag  shaderSubWindow.frag
SparkyEngine/src/utils/: DynamicArray.h  VectorRemoval.cpp  VectorRemoval.h  imageLoad.h  timer.h
